hphp/hack/test/typecheck/inout/bad_inout_decl_parent2.php.exp
File "bad_inout_decl_parent2.php", line 8, characters 19-21:
The method `foo` is not compatible with the overridden method (Typing[4341])
  File "bad_inout_decl_parent2.php", line 8, characters 19-21:
  Method `foo` has type `(function(string $x, inout int $y): void)` in `C2`
  File "bad_inout_decl_parent2.php", line 4, characters 19-21:
  But is has type `(function(string $x, int $y): void)` in parent `C1`
  File "bad_inout_decl_parent2.php", line 8, characters 19-21:
  Type `(function(string $x, inout int $y): void)` is not a subtype of `(function(string $x, int $y): void)`
  File "bad_inout_decl_parent2.php", line 8, characters 44-45:
  This is an `inout` parameter
  File "bad_inout_decl_parent2.php", line 4, characters 38-39:
  It is incompatible with a normal parameter
